# stuff

./: Cargo.toml
crates/stuff/: Cargo.toml
crates/stuff/src/: area.rs  client.rs  config.rs  event.rs  lib.rs  project.rs  state.rs  store.rs  task.rs
src/: config.rs  main.rs  project.rs  store.rs  task.rs
stuff-gui/: next.config.js  package.json
stuff-gui/src/: stuff.ts
stuff-gui/src-tauri/: Cargo.toml  tauri.conf.json
stuff-gui/src-tauri/src/: main.rs
stuff-gui/src/components/: NewTaskForm.tsx  PageTitle.tsx  TaskForm.tsx  TaskItem.tsx
stuff-gui/src/hooks/: useEditTask.ts
stuff-gui/src/pages/: _app.tsx  inbox.tsx  index.tsx  settings.tsx  today.tsx
stuff-gui/src/pages/areas/: [areaId].tsx  new.tsx
stuff-gui/src/pages/projects/: [projectId].tsx  new.tsx
