[package]
name = "stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
xdg = "2.4.1"
