[package]
name = "stuff-cli"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/stuff",
  "stuff-gui/src-tauri",
]

[dependencies]
stuff = { path = "crates/stuff" }
clap = { version = "4.0.26", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
itertools = "0.10.5"
