[package]
name = "stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = { version = "1.0" }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
xdg = "2.4.1"
glob = "0.3.0"
